# Web-Application-using-Microservices

./: LICENSE  README.md  TODO  pyproject.toml
project/: settings.py  urls.py
templates/includes/: base.html
testapp/: admin.py  models.py  urls.py  views.py
testapp/management/commands/: populate_events.py
testapp/migrations/: 0001_initial.py
testapp/templatetags/: events_tags.py
